--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -40,13 +40,13 @@
 # hypertext_type = gallery
 #
 #
-# Each notification can have disabled and preferred modes and techs - divided by ; 
-# preferred_mode = simple
-# disabled_mode = advanced; expert
-# preferred_tech = SLA
-# disabled_tech = FFF; MMU 
-# Algorithm shows hint only if in preffered mode / tech.
-# Algorithm shows hint only if not in disabled mode / tech.
+# Each notification can have disabled and enabled modes and techs - divided by ; and space 
+# enabled_tags = ...
+# disabled_tags = ...
+# supported tags are: simple; advanced; expert; FFF; MMU; SLA
+# FFF is affirmative for both one or more extruder printers.
+# Algorithm shows hint only if ALL enabled tags are affirmative. (so never do enabled_tags = FFF; SLA;)
+# Algorithm shows hint only if not in all disabled tags.
 # if there are both disabled and preferred, only preferred that are not in disabled are valid.
 
 
@@ -70,7 +70,7 @@ hypertext_type = settings
 hypertext_settings_opt = infill_every_layers
 hypertext_settings_type = 1
 hypertext_settings_category = Infill
-disabled_modes = SLA; simple
+disabled_tags = SLA; simple
 
 [hint:Hiding sidebar]
 text = Hiding sidebar\nDid you know that you can hide the right sidebar using the shortcut <b>Shift+Tab</b>? You can also enable the icon for this from the<a>Preferences.</a>
@@ -81,7 +81,7 @@ hypertext_preferences_page = 2
 text = Variable layer height\nDid you know that you can print different regions of your model with a different layer height and smooth the transitions between them? Try the<a>Variable layer height tool.</a>(Not available for SLA printers.)
 hypertext_type = plater
 hypertext_plater_item = layersediting
-disabled_modes = SLA
+disabled_tags = SLA
 
 [hint:Undo/redo history]
 text = Undo/redo history\nDid you know that you can right-click the<a>undo/redo arrows</a>to see the history of changes and to undo or redo several actions at once?
@@ -94,12 +94,12 @@ hypertext_type = plater
 hypertext_plater_item = arrange
 
 [hint:Reload from disk]
-text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in PrusaSlicer? Right-click the model in the 3D view and choose Reload from disk. Read more in the<a>documentation.</a>
+text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in PrusaSlicer? Right-click the model in the 3D view and choose Reload from disk. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
 
 [hint:Different layer height for each model]
-text = Different layer height for each model\nDid you know that you can print each model on the plater with a different layer height? Right-click the model in the 3D view, choose Layers and Perimeters and adjust the values in the right panel. Read more in the<a>documentation.</a>
+text = Different layer height for each model\nDid you know that you can print each model on the plater with a different layer height? Right-click the model in the 3D view, choose Layers and Perimeters and adjust the values in the right panel. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/per-model-settings_1674
 
@@ -109,7 +109,7 @@ hypertext_type = settings
 hypertext_settings_opt = solid_infill_below_area
 hypertext_settings_type = 1
 hypertext_settings_category = Infill  
-disabled_modes = SLA; simple; advanced
+enabled_tags = FFF; expert
 
 [hint:Search functionality]
 text = Search functionality\n Did you know that you use the<a>Search</a>tool to quickly find a specific PrusaSlicer setting? Or use the familiar shortcut <b>Ctrl+F</b>.
@@ -140,10 +140,10 @@ text = PageUp / PageDown quick rotation by 45 degrees\nDid you know that you can
 text = Load config from G-code\nDid you know that you can use File-Import Config to load print, filament and printer profiles from an existing G-code file? Similarly, you can use File-Import SL1 archive, which also lets you reconstruct 3D models from the voxel data.
 
 [hint:Ironing]
-text = Ironing\nDid you know that you can smooth top surfaces of prints using Ironing? The nozzle will run a special second infill phase at the same layer to fill in holes and flatten any lifted plastic. Read more in the<a>documentation.</a> (Requires Advanced or Expert mode.)
+text = Ironing\nDid you know that you can smooth top surfaces of prints using Ironing? The nozzle will run a special second infill phase at the same layer to fill in holes and flatten any lifted plastic. Read more in the documentation. (Requires Advanced or Expert mode.)
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/ironing_177488
-disabled_modes = SLA; simple
+disabled_tags = SLA; simple
 
 [hint:Fuzzy skin]
 text = Fuzzy skin\nDid you know that you can create rough fibre-like texture on the sides of your models using the<a>Fuzzy skin</a>feature? You can also use modifiers to apply fuzzy-skin only to a portion of your model.
@@ -151,38 +151,38 @@ hypertext_type = settings
 hypertext_settings_opt = fuzzy_skin
 hypertext_settings_type = 1
 hypertext_settings_category = Layers and perimeters
-disabled_modes = SLA
+disabled_tags = SLA
 
 [hint:Negative volume]
-text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in PrusaSlicer. Read more in the<a>documentation.</a>(Requires Advanced or Expert mode.)
+text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in PrusaSlicer. Read more in the documentation. (Requires Advanced or Expert mode.)
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/negative-volume_238503
-disabled_modes = SLA; simple
+disabled_tags = SLA; simple
 
 [hint:Paint-on supports]
 text = Paint-on supports\nDid you know that you can paint directly on the object and select areas, where supports should be enforced or blocked? Try the<a>Paint-on supports</a>feature. (Requires Advanced or Expert mode.)
 hypertext_type = gizmo
 hypertext_gizmo_item = fdm_supports
-disabled_modes = SLA; simple
+disabled_tags = SLA; simple
 
 [hint:Paint-on seam]
 text = Paint-on seam\nDid you know that you can paint directly on the object and select where to place the start/endpoint of each perimeter loop? Try the<a>Seam painting</a>feature. (Requires Advanced or Expert mode.)
 hypertext_type = gizmo
 hypertext_gizmo_item = seam
-disabled_modes = SLA; simple
+disabled_tags = SLA; simple
 
 [hint:Insert Pause]
-text = Insert Pause\nDid you know that you can schedule the print to pause at a specific layer? Right-click the layer slider in the Preview and select Add pause print (M601). This can be used to insert magnets, weights or nuts into your prints. Read more in the<a>documentation.</a>
+text = Insert Pause\nDid you know that you can schedule the print to pause at a specific layer? Right-click the layer slider in the Preview and select Add pause print (M601). This can be used to insert magnets, weights or nuts into your prints. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-pause-at-layer
 
 [hint:Insert Custom G-code]
-text = Insert Custom G-code\nDid you know that you can insert a custom G-code at a specific layer? Right-click the layer in the Preview and select Add custom G-code. With this function you can, for example, create a temperature tower. Read more in the<a>documentation.</a>
+text = Insert Custom G-code\nDid you know that you can insert a custom G-code at a specific layer? Right-click the layer in the Preview and select Add custom G-code. With this function you can, for example, create a temperature tower. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-custom-g-code-at-layer
 
 [hint:Configuration snapshots]
-text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - Configuration snapshots menu. Read more in the<a>documentation.</a>
+text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - Configuration snapshots menu. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/configuration-snapshots_1776
 
@@ -192,7 +192,7 @@ hypertext_type = settings
 hypertext_settings_opt = top_solid_min_thickness
 hypertext_settings_type = 1
 hypertext_settings_category = Layers and perimeters
-disabled_modes = SLA
+disabled_tags = SLA
 
 [hint:Settings in non-modal window]
 text = Settings in non-modal window\nDid you know that you can open the Settings in a new non-modal window? This means you can have settings open on one screen and the G-code Preview on the other. Go to the<a>Preferences</a>and select Settings in non-modal window.
@@ -200,7 +200,7 @@ hypertext_type = preferences
 hypertext_preferences_page = 2
 
 [hint:Adaptive infills]
-text = Adaptive infills\nDid you know that you can use the Adaptive cubic and Support cubic infills to decrease the print time and lower the filament consumption? Read more in the<a>documentation.</a>
+text = Adaptive infills\nDid you know that you can use the Adaptive cubic and Support cubic infills to decrease the print time and lower the filament consumption? Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
 
@@ -208,7 +208,7 @@ documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
 text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscreen mode? Use the <b>F11</b> hotkey.
 
 [hint:Simplify mesh]
-text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the<a>documentation.</a>
+text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/simplify-mesh_238941
 
