Hints notifications: OS specific tags

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -43,7 +43,8 @@
 # Each notification can have disabled and enabled modes and techs - divided by ; and space 
 # enabled_tags = ...
 # disabled_tags = ...
-# supported tags are: simple; advanced; expert; FFF; MMU; SLA
+# supported tags are: simple; advanced; expert; FFF; MMU; SLA; Windows; Linux; OSX;
+# Tags are case sensitive. 
 # FFF is affirmative for both one or more extruder printers.
 # Algorithm shows hint only if ALL enabled tags are affirmative. (so never do enabled_tags = FFF; SLA;)
 # Algorithm shows hint only if not in all disabled tags.
@@ -206,6 +207,7 @@ documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
 
 [hint:Fullscreen mode]
 text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscreen mode? Use the <b>F11</b> hotkey.
+enabled_tags = Windows
 
 [hint:Simplify mesh]
 text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the documentation.
