--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -103,6 +103,7 @@ documentation_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
 text = Different layer height for each model\nDid you know that you can print each model on the plater with a different layer height? Right-click the model in the 3D view, choose Layers and Perimeters and adjust the values in the right panel. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/per-model-settings_1674
+disabled_tags = SLA
 
 [hint:Solid infill threshold area]
 text = Solid infill threshold area\nDid you know that you can make parts of your model with a small cross-section be filled with solid infill automatically? Set the<a>Solid infill threshold area.</a>(Expert mode only.)
@@ -176,11 +177,13 @@ disabled_tags = SLA; simple
 text = Insert Pause\nDid you know that you can schedule the print to pause at a specific layer? Right-click the layer slider in the Preview and select Add pause print (M601). This can be used to insert magnets, weights or nuts into your prints. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-pause-at-layer
+disabled_tags = SLA
 
 [hint:Insert Custom G-code]
 text = Insert Custom G-code\nDid you know that you can insert a custom G-code at a specific layer? Right-click the layer in the Preview and select Add custom G-code. With this function you can, for example, create a temperature tower. Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-g-code-at-layer_120490#insert-custom-g-code-at-layer
+disabled_tags = SLA
 
 [hint:Configuration snapshots]
 text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - Configuration snapshots menu. Read more in the documentation.
@@ -204,6 +207,7 @@ hypertext_preferences_page = 2
 text = Adaptive infills\nDid you know that you can use the Adaptive cubic and Support cubic infills to decrease the print time and lower the filament consumption? Read more in the documentation.
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/infill-patterns_177130
+disabled_tags = SLA
 
 [hint:Fullscreen mode]
 text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscreen mode? Use the <b>F11</b> hotkey.
