Reorderded hints, removed extra space
Edited hints.ini to have tips for new features displayed first.
Removed extra space from a hint.

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -7,7 +7,7 @@
 # text = Headline of hint\nBody of hint.
 # Headline is divided by new line (\n) from body.
 # Headline is automaticaly printed as Bold.
-# Body can contain bold marks: <b>text to be bold</b> (currently rendered as diffenert color, not bold due to font limitations)
+# Body can contain bold marks: <b>text to be bold</b> (currently rendered as different color, not bold due to font limitations)
 # Body can contain hypertext: <a>hypertext text</a>
 # Hypertext must be max one per notification and must be closed by </a>
 #
@@ -51,6 +51,45 @@
 # if there are both disabled and preferred, only preferred that are not in disabled are valid.
 
 
+[hint:Fuzzy skin]
+text = Fuzzy skin\nDid you know that you can create rough fibre-like texture on the sides of your models using the<a>Fuzzy skin</a>feature? You can also use modifiers to apply fuzzy-skin only to a portion of your model.
+hypertext_type = settings
+hypertext_settings_opt = fuzzy_skin
+hypertext_settings_type = 1
+hypertext_settings_category = Layers and perimeters
+disabled_tags = SLA
+
+[hint:Shapes gallery]
+text = Shapes gallery\nDid you know that PrusaSlicer has a Shapes Gallery? You can use the included models as modifiers, negative volumes or as printable objects. Right-click the platter and select<a>Add Shape - Gallery.</a>
+hypertext_type = gallery
+disable_modes = simple
+
+[hint:Auto-arrange settings]
+text = Auto-arrange settings\nDid you know that you can right-click the<a>auto-arrange icon</a>to adjust the size of the gap between objects and to allow automatic rotations?
+hypertext_type = plater
+hypertext_plater_item = arrange
+
+[hint:Negative volume]
+text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in PrusaSlicer. Read more in the documentation. (Requires Advanced or Expert mode.)
+hypertext_type = link
+documentation_link = https://help.prusa3d.com/en/article/negative-volume_238503
+disabled_tags = SLA; simple
+
+[hint:Simplify mesh]
+text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the documentation.
+hypertext_type = link
+documentation_link = https://help.prusa3d.com/en/article/simplify-mesh_238941
+
+[hint:Reload from disk]
+text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in PrusaSlicer? Right-click the model in the 3D view and choose Reload from disk. Read more in the documentation.
+hypertext_type = link
+documentation_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
+
+[hint:Hiding sidebar]
+text = Hiding sidebar\nDid you know that you can hide the right sidebar using the shortcut <b>Shift+Tab</b>? You can also enable the icon for this from the<a>Preferences.</a>
+hypertext_type = preferences
+hypertext_preferences_page = 2
+
 [hint:Perspective camera]
 text = Perspective camera\nDid you know that you can use the <b>K</b> key to quickly switch between an orthographic and perspective camera?
 
@@ -73,11 +112,6 @@ hypertext_settings_type = 1
 hypertext_settings_category = Infill
 disabled_tags = SLA; simple
 
-[hint:Hiding sidebar]
-text = Hiding sidebar\nDid you know that you can hide the right sidebar using the shortcut <b>Shift+Tab</b>? You can also enable the icon for this from the<a>Preferences.</a>
-hypertext_type = preferences
-hypertext_preferences_page = 2
-
 [hint:Variable layer height]
 text = Variable layer height\nDid you know that you can print different regions of your model with a different layer height and smooth the transitions between them? Try the<a>Variable layer height tool.</a>(Not available for SLA printers.)
 hypertext_type = plater
@@ -89,20 +123,10 @@ text = Undo/redo history\nDid you know that you can right-click the<a>undo/redo 
 hypertext_type = plater
 hypertext_plater_item = undo
 
-[hint:Auto-arrange settings]
-text = Auto-arrange settings\nDid you know that you can right-click the<a>auto-arrange icon</a>to adjust the size of the gap between objects and to allow automatic rotations?
-hypertext_type = plater
-hypertext_plater_item = arrange
-
-[hint:Reload from disk]
-text = Reload from disk\nDid you know that if you created a newer version of your model, you can simply reload it in PrusaSlicer? Right-click the model in the 3D view and choose Reload from disk. Read more in the documentation.
-hypertext_type = link
-documentation_link = https://help.prusa3d.com/en/article/reload-from-disk_120427
-
 [hint:Different layer height for each model]
 text = Different layer height for each model\nDid you know that you can print each model on the plater with a different layer height? Right-click the model in the 3D view, choose Layers and Perimeters and adjust the values in the right panel. Read more in the documentation.
 hypertext_type = link
-documentation_link = https://help.prusa3d.com/en/article/per-model-settings_1674
+documentation_link= https://help.prusa3d.com/en/article/per-model-settings_1674
 disabled_tags = SLA
 
 [hint:Solid infill threshold area]
@@ -114,7 +138,7 @@ hypertext_settings_category = Infill
 enabled_tags = FFF; expert
 
 [hint:Search functionality]
-text = Search functionality\n Did you know that you use the<a>Search</a>tool to quickly find a specific PrusaSlicer setting? Or use the familiar shortcut <b>Ctrl+F</b>.
+text = Search functionality\nDid you know that you use the<a>Search</a>tool to quickly find a specific PrusaSlicer setting? Or use the familiar shortcut <b>Ctrl+F</b>.
 hypertext_type = plater
 hypertext_plater_item = search
 
@@ -123,11 +147,6 @@ text = Box selection\nDid you know that you can do a box selection with Shift+Mo
  
 [hint:Zoom on selected objects or on all objects if none selected]
 text =Zoom on selected objects or on all objects if none selected\nDid you know that you can zoom in on selected objects by pressing the <b>Z</b> key? If none are selected, the camera will zoom on all objects in the scene. 
-
-[hint:Shapes gallery]
-text = Shapes gallery\nDid you know that PrusaSlicer has a Shapes Gallery? You can use the included models as modifiers, negative volumes or as printable objects. Right-click the platter and select<a>Add Shape - Gallery.</a>
-hypertext_type = gallery
-disable_modes = simple
 
 [hint:Printable toggle]
 text = Printable toggle\nDid you know that you can disable the G-code generation for the selected model without having to move or delete it? Toggle the Printable property of a model from the Right-click context menu.
@@ -145,20 +164,6 @@ text = Load config from G-code\nDid you know that you can use File-Import Config
 text = Ironing\nDid you know that you can smooth top surfaces of prints using Ironing? The nozzle will run a special second infill phase at the same layer to fill in holes and flatten any lifted plastic. Read more in the documentation. (Requires Advanced or Expert mode.)
 hypertext_type = link
 documentation_link = https://help.prusa3d.com/en/article/ironing_177488
-disabled_tags = SLA; simple
-
-[hint:Fuzzy skin]
-text = Fuzzy skin\nDid you know that you can create rough fibre-like texture on the sides of your models using the<a>Fuzzy skin</a>feature? You can also use modifiers to apply fuzzy-skin only to a portion of your model.
-hypertext_type = settings
-hypertext_settings_opt = fuzzy_skin
-hypertext_settings_type = 1
-hypertext_settings_category = Layers and perimeters
-disabled_tags = SLA
-
-[hint:Negative volume]
-text = Negative volume\nDid you know that you can subtract one mesh from another using the Negative volume modifier? That way you can, for example, create easily resizable holes directly in PrusaSlicer. Read more in the documentation. (Requires Advanced or Expert mode.)
-hypertext_type = link
-documentation_link = https://help.prusa3d.com/en/article/negative-volume_238503
 disabled_tags = SLA; simple
 
 [hint:Paint-on supports]
@@ -212,11 +217,6 @@ disabled_tags = SLA
 [hint:Fullscreen mode]
 text = Fullscreen mode\nDid you know that you can switch PrusaSlicer to fullscreen mode? Use the <b>F11</b> hotkey.
 enabled_tags = Windows
-
-[hint:Simplify mesh]
-text = Simplify mesh\nDid you know that you can reduce the number of triangles in a mesh using the Simplify mesh feature? Right-click the model and select Simplify model. Read more in the documentation.
-hypertext_type = link
-documentation_link = https://help.prusa3d.com/en/article/simplify-mesh_238941
 
 #[hint:]
 #text = 
