comments in hints.ini

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -49,7 +49,13 @@
 # Algorithm shows hint only if ALL enabled tags are affirmative. (so never do enabled_tags = FFF; SLA;)
 # Algorithm shows hint only if not in all disabled tags.
 # if there are both disabled and preferred, only preferred that are not in disabled are valid.
-
+#
+#
+# Notifications shows in random order, already shown notifications are saved at cache/hints.cereal (as binary - human non-readable)
+# You can affect random ordering by seting weigh
+# weight = 5
+# Weight must be larger or equal to 1. Default weight is 1.
+# Weight defines probability as weight : sum_of_all_weights.
 
 [hint:Fuzzy skin]
 text = Fuzzy skin\nDid you know that you can create rough fibre-like texture on the sides of your models using the<a>Fuzzy skin</a>feature? You can also use modifiers to apply fuzzy-skin only to a portion of your model.
