Brim separation from object, follow up to 1c3ce231abe6cb47dcc2a10690df8e51da1e195a 1) Changed the name of the variable "brim_offset" to "brim_separation"    for clarity. 2) Added legacy conversion after loading an old 3MF that does not define    then new "brim_separation" variable: The "brim_separation" is being    filled in with the "elefant_foot_compensation" value to produce    equal brim separation to the old PrusaSlicer that saved that 3MF file.

--- a/resources/profiles/PrusaResearch.ini
+++ b/resources/profiles/PrusaResearch.ini
@@ -144,7 +144,7 @@ bridge_angle = 0
 bridge_flow_ratio = 1
 bridge_speed = 25
 brim_width = 0
-brim_offset = 0.1
+brim_separation = 0.1
 clip_multipart_objects = 1
 compatible_printers = 
 complete_objects = 0
