Commented opening menubar item until its properly implemented.

--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -194,11 +194,11 @@ documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-
 disabled_tags = SLA
 
 [hint:Configuration snapshots]
-text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - <a>Configuration snapshots menu.</a>
+text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - Configuration snapshots menu.
 documentation_link = https://help.prusa3d.com/en/article/configuration-snapshots_1776
-hypertext_type = menubar
-hypertext_menubar_menu_id = 4
-hypertext_menubar_item_id = 1
+#hypertext_type = menubar
+#hypertext_menubar_menu_id = 4
+#hypertext_menubar_item_id = 1
 
 [hint:Minimum wall thickness]
 text = Minimum wall thickness\nDid you know that instead of the number of top and bottom layers, you can define the<a>Minimum shell thickness</a>in millimeters? This feature is especially useful when using the variable layer height function.
