--- a/resources/profiles/PrusaResearch.ini
+++ b/resources/profiles/PrusaResearch.ini
@@ -5,7 +5,7 @@
 name = Prusa Research
 # Configuration version of this file. Config file will only be installed, if the config_version differs.
 # This means, the server may force the PrusaSlicer configuration to be downgraded.
-config_version = 1.4.0-beta0
+config_version = 1.4.0-beta1
 # Where to get the updates from?
 config_update_url = https://files.prusa3d.com/wp-content/uploads/repository/PrusaSlicer-settings-master/live/PrusaResearch/
 changelog_url = https://files.prusa3d.com/?latest=slicer-profiles&lng=%1%
@@ -2775,6 +2775,7 @@ compatible_printers_condition = nozzle_diameter[0]>=0.4 and printer_model!="MINI
 
 [filament:Filatech FilaCarbon @MINI]
 inherits = Filatech FilaCarbon; *ABSMINI*
+first_layer_bed_temperature = 100
 compatible_printers_condition = nozzle_diameter[0]>=0.4 and printer_model=="MINI"
 
 [filament:Filatech FilaPLA]
@@ -4475,7 +4476,7 @@ pad_enable = 1
 pad_max_merge_distance = 50
 pad_wall_height = 0
 pad_wall_thickness = 1
-pad_wall_slope = 90
+pad_wall_slope = 45
 slice_closing_radius = 0.005
 support_base_diameter = 3
 support_base_height = 1
