New code for minimum enclosing circle by randomized Welzl algorithm. Split the circle code from Geometry.cpp/hpp to Geometry/Circle.cpp,hpp

--- a/src/libslic3r/CMakeLists.txt
+++ b/src/libslic3r/CMakeLists.txt
@@ -114,6 +114,8 @@ add_library(libslic3r STATIC
     GCodeWriter.hpp
     Geometry.cpp
     Geometry.hpp
+    Geometry/Circle.cpp
+    Geometry/Circle.hpp
     Int128.hpp
     KDTreeIndirect.hpp
     Layer.cpp
