--- a/resources/data/hints.ini
+++ b/resources/data/hints.ini
@@ -197,7 +197,7 @@ documentation_link = https://help.prusa3d.com/en/article/insert-pause-or-custom-
 disabled_tags = SLA
 
 [hint:Configuration snapshots]
-text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - Configuration snapshots menu.
+text = Configuration snapshots\nDid you know that roll back to a complete backup of all system and user profiles? You can view and move back and forth between snapshots using the Configuration - <a>Configuration snapshots menu</a>.
 documentation_link = https://help.prusa3d.com/en/article/configuration-snapshots_1776
 hypertext_type = menubar
 hypertext_menubar_menu_name = Configuration
