--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -104,6 +104,15 @@ bed_model = ender2_bed.stl
 bed_texture = ender2.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+[printer_model:ENDER2PRO]
+name = Creality Ender-2 Pro
+variants = 0.4
+technology = FFF
+family = ENDER
+bed_model = ender2pro_bed.stl
+bed_texture = ender2pro.svg
+default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA Matt @CREALITY; Devil Design PLA Galaxy @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 3DJAKE ecoPLA Matt @CREALITY; 3DJAKE ecoPLA Tough @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 [printer_model:CR5PRO]
 name = Creality CR-5 Pro
 variants = 0.4
@@ -1000,6 +1009,14 @@ renamed_from = "Creality ENDER-2"
 bed_shape = 0x0,150x0,150x150,0x150
 max_print_height = 200
 printer_model = ENDER2
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER2\nPRINTER_HAS_BOWDEN
+
+[printer:Creality Ender-2 Pro]
+inherits = *common*
+renamed_from = "Creality ENDER-2 Pro"
+bed_shape = 0x0,165x0,165x165,0x165
+max_print_height = 180
+printer_model = ENDER2PRO
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER2\nPRINTER_HAS_BOWDEN
 
 [printer:Creality CR-5 Pro]
