creality.ini: slight improvements to Ender-2 Pro
Replace bed stl with something consistent with the rest
Replace bed svg with something simpler consistent with the rest
Add tiny safety margin

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -1014,10 +1014,10 @@ printer_notes = Don't remove the following keywords! These keywords are used in 
 [printer:Creality Ender-2 Pro]
 inherits = *common*
 renamed_from = "Creality ENDER-2 Pro"
-bed_shape = 0x0,165x0,165x165,0x165
+bed_shape = 2.5x2.5,160x2.5,160x160,2.5x160
 max_print_height = 180
 printer_model = ENDER2PRO
-printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER2\nPRINTER_HAS_BOWDEN
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER2PRO\nPRINTER_HAS_BOWDEN
 
 [printer:Creality CR-5 Pro]
 inherits = *common*; *slowabl*; *descendingz*
